# ECPC-Eindfeest

./: README.md  pyproject.toml
src/Eindfeest/: diode_experiment.py  gui.py
