[tool.poetry]
name = "ecpc-eindfeest"
version = "0.1.0"
description = ""
authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqtgraph = "^0.13.3"
pyside6 = "^6.6.1"
rich = "^13.7.0"
pyvisa = "^1.14.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
